--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 	</div>
 
 	<div id="homescript1">
-		<img src="img/Clip.png">
+		<img src="img/clip.png">
 		<h1 id="homescript1-header">CLIP STUDIO PAINT</h1>
 		<p class="text" id="homescript1-text">CLIP STUDIO PAINT(이하 클립스튜디오)는 만화, 일러스트 제작자를 뒷받침하는 필수 그래픽 소프트웨어 및 응용 프로그램입니다. 클립 스튜디오는 만화를 그리기 위한 전문화 된 기능을 제공하며, 작업을 채색하는 기능이 향상되었습니다. 이 소프트웨어 또는 앱을 사용하여 만화를 만들 수 있습니다.</p>
 	</div>
