--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 	</div>
 
 	<div id="homescript2">
-		<img src="img/homescriptimg2.png">
+		<img src="img/homescriptimg2.PNG">
 		<h1 id="homescript2-header">CLIP STUDIO ASSETS</h1>
 		<p class="text" id="homescript2-text">클립 스튜디오는 포토샵과 같은 브러쉬 뿐만 아니라 3D모델이나 텍스쳐 등 다양한 소재들을 제공합니다. CLIO STUDIO ASSETS란 클립 스튜디오에서  사용할 수 있는 톤이나 3D 등의 소재를 다운로드하거나 기존 소재를 출품 할 수있는 서비스입니다. 다른 유저들이 출품한 소재를 다운로드하여 사용할 수도, 자신이 소재를 만들어 배포할 수도 있습니다.
 
